[package]
name = "img_api"
version = "0.1.0"
authors = ["pekanius <pekanius@yandex.ru>"]
edition = "2018"

[dependencies]
actix-web = {version = "1.0.8", features = ["ssl"]}
actix-multipart = "0.1.4"
actix-utils = "0.4.7"
actix-http = "0.2.10"
futures = "0.1.29"
mime = "0.3.14"
env_logger = "0.7.1"
serde = "1.0.101"
serde_json = "1.0.41"
reqwest = "0.9.22"
rand = "0.7.2"
image = "0.22.3"
bytes = "0.4.12"
http = "0.1.19"